[package]
name = "downscaler"
about = "hacky script to downscale videos"
version = "0.1.0"
edition = "2021"
authors = ["Korny Sietsma <korny@sietsma.com>"]
readme = "README.md"
license = "MIT"


[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
